--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ serde_json = "1.0.141"
 serde_yaml = "0.9.34"
 tokio = { version = "1.46.1", features = ["full"] }
 tokio-rustls = "0.26.2"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std",  "fmt",  "local-time", "time"] }
