finish middleware for responses

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "broxy"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "broxy"
+path = "src/lib.rs"
+
+[[bin]]
+name = "broxy"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0.98"
 futures = "0.3.31"
