--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ hyper-util = { version = "0.1.15", features = ["full"] }
 libloading = "0.8.8"
 rayon = "1.10.0"
 regex = "1.11.1"
+rustls-pemfile = "2.2.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 serde_yaml = "0.9.34"
