--- a/broxy-core/Cargo.toml
+++ b/broxy-core/Cargo.toml
@@ -1,19 +1,21 @@
 [package]
-name = "broxy"
+name = "broxy-core"
 version = "0.1.0"
 edition = "2024"
 
-[workspace]
-
 [dependencies]
-broxy-core = {path="./broxy-core"}
 anyhow = "1.0.98"
+futures = "0.3.31"
 http = "1.3.1"
+http-body-util = "0.1.3"
+hyper = { version = "1.6.0", features = ["full"] }
+hyper-rustls = { version = "0.27.7", features = ["http2", "http1"] }
+hyper-util = { version = "0.1.15", features = ["full"] }
+libloading = "0.8.8"
+rayon = "1.10.0"
 regex = "1.11.1"
 rustls-pemfile = "2.2.0"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.141"
-serde_yaml = "0.9.34"
 tokio = { version = "1.46.1", features = ["full"] }
 tokio-rustls = "0.26.2"
 tracing = "0.1"
